// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar should match snapshot (authenticated) 1`] = `
<div
  className="c-ui__sidebar"
>
  <p>
    Hi, Ethan Frost!
  </p>
  <hr />
  <button
    className="c-ui__sidebar-item qa-auth-logout "
    key="0-666"
    onClick={[Function]}
  >
    Logout
  </button>
  <DeleteButton />
</div>
`;

exports[`sidebar should match snapshot (default) 1`] = `
<div
  className="c-ui__sidebar"
>
  <p>
    Hi, Anonymous!
  </p>
  <hr />
  <button
    className="c-ui__sidebar-item qa-auth-facebook "
    key="0-826"
    onClick={[Function]}
  >
    Facebook Login
  </button>
  <button
    className="c-ui__sidebar-item qa-auth-github "
    key="0-643"
    onClick={[Function]}
  >
    GitHub Login
  </button>
  <button
    className="c-ui__sidebar-item qa-auth-twitter u-no-margin"
    key="0-787"
    onClick={[Function]}
  >
    Twitter Login
  </button>
</div>
`;
